# samo

./: Cargo.toml  README.md  build.rs  cbindgen.toml
.cargo/: config.toml
include/: samo_f.F90
src/: blas_utils.rs  common.rs  cpuasync.rs  cublas.rs  cuda.rs  helper_blas.rs  lib.rs  matrix.rs  stream.rs  test-bin.rs  tile.rs  tile_gpu.rs  tiled_matrix.rs  tiled_matrix_gpu.rs
src/cublas/: cpu.rs  cublas.rs  gpu.rs  mod.rs
src/cublas/cpu/: cublas_blas.rs  cublas_context.rs  cublas_error.rs  cublas_stream.rs
src/cublas/gpu/: cublas_blas.rs  cublas_context.rs  cublas_error.rs  cublas_memory.rs  cublas_stream.rs
src/cuda/: cuda_device.rs  cuda_error.rs  cuda_memory.rs  cuda_stream.rs  gpu.rs  mod.rs
src/cuda/cpu/: cuda_device.rs  cuda_error.rs  cuda_memory.rs  cuda_stream.rs
src/cuda/gpu/: cuda_device.rs  cuda_memory.rs  cuda_stream.rs
src/matrix/: geam.rs  gemm.rs  mod.rs
tests/: blas.rs  gemm.rs  helper_blas.rs  test.F90
