[package]
name = "samo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/docs-header.html" ]

[dependencies]
blas = "0.22.0"
cublas = "0.2.0"
num = "0.4.1"
rayon = "1.8.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
blas-src = { version = "0.9.0", features = ["intel-mkl"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
blas-src = { version = "0.9.0", features = ["openblas"] }


#[profile.release]
#lto = "fat"
#codegen-units = 1
#panic = "abort"

#[lib]
#crate-type = ["cdylib"]      # Creates dynamic lib
# crate-type = ["staticlib"] # Creates static lib
