[package]
name = "samo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/docs-header.html" ]

[features]
default = []
intel-mkl = ["blas-src/intel-mkl"]
blis = ["blas-src/blis"]
accelerate = ["blas-src/accelerate"]
openblas = ["blas-src/openblas"]
r = ["blas-src/r"]
netlib = ["blas-src/netlib"]

[dependencies]
blas = "0.22.0"
cublas = "0.2.0"
num = "0.4.1"
rayon = "1.8.0"

blas-src = { version = "0.9.0", default-features = false }


#[profile.release]
#lto = "fat"
#codegen-units = 1
#panic = "abort"

[lib]
crate-type = ["cdylib", "rlib"]      # Creates dynamic lib
#crate-type = ["staticlib"] # Creates static lib

[[bin]]
name = "test-bin"
path = "src/test-bin.rs"
