[package]
name = "samo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/docs-header.html" ]

[features]
default = []
cublas = []
intel-mkl = ["intel-mkl-src/mkl-static-lp64-iomp"]
blis = ["blas-src/blis"]
accelerate = ["blas-src/accelerate"]
openblas = ["blas-src/openblas"]
netlib = ["blas-src/netlib"]


[dependencies]
num = "0.4.1"
rayon = "1.8.0"
blas = { version = "0.22.0", optional = false }
blas-src = { version = "0.9.0", optional = true, default-features = false }
blas-sys = { version = "0.7.1", optional = true, default-features = false }
intel-mkl-src = { version = "0.8.1", optional = true }




#[profile.release]
#lto = "fat"
#codegen-units = 1
#panic = "abort"

[lib]
crate-type = ["cdylib", "rlib"]      # Creates dynamic lib
#crate-type = ["staticlib"] # Creates static lib

[[bin]]
name = "test-bin"
path = "src/test-bin.rs"


